@@ -5,6 +5,7 @@ import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import java.io.IOException;
 import java.net.Socket;
 import java.util.ArrayList;
 import java.util.Calendar;
@@ -95,7 +96,7 @@ public class TcpDispatcherTest {
 			dispatcher.stop();
 			log("Undeploying TCP Dispatcher...");
 			dispatcher.onUndeploy();
-			Thread.sleep(1000);
+			Thread.sleep(3000);
 		}
 	}
 	
@@ -122,7 +123,7 @@ public class TcpDispatcherTest {
 		Thread.sleep(1000);
 	}
 	
-	private TcpDispatcherProperties createTcpDispatcherProperties() {
+	private TcpDispatcherProperties createTcpDispatcherProperties() throws IOException {
 		TcpDispatcherProperties dispatcherProps = new TcpDispatcherProperties();
 		dispatcherProps.getTransmissionModeProperties().setPluginPointName("Basic");
 		FrameModeProperties frameProps = new FrameModeProperties();
@@ -303,8 +304,8 @@ public class TcpDispatcherTest {
         	}
         }
         
-        assertEquals(new Integer(2), successfulSends);
-        assertEquals(new Integer(2), numberOfClients);
+        assertEquals(Integer.valueOf(2), successfulSends);
+        assertEquals(Integer.valueOf(2), numberOfClients);
 	}
 	
 	/*
@@ -350,9 +351,9 @@ public class TcpDispatcherTest {
         		assertEquals(TEST_MESSAGE_TEMPLATE, socketResult.get("result" + entry.getKey()));
         	}
         }
-        
-        assertEquals(new Integer(2), successfulSends);
-        assertEquals(new Integer(2), numberOfClients);
+
+        assertEquals(Integer.valueOf(2), successfulSends);
+        assertEquals(Integer.valueOf(2), numberOfClients);
 	}
 	
 	/*
@@ -389,8 +390,8 @@ public class TcpDispatcherTest {
         Integer numberOfClients = (Integer) message.getConnectorMap().get(CONNECTOR_MAP_NO_OF_CLIENTS_KEY);
         Integer successfulSends = (Integer) message.getConnectorMap().get(CONNECTOR_MAP_SUCCESSFUL_SENDS_KEY);
 
-        assertEquals(new Integer(1), successfulSends);
-        assertEquals(new Integer(1), numberOfClients);
+        assertEquals(Integer.valueOf(1), successfulSends);
+        assertEquals(Integer.valueOf(1), numberOfClients);
 	}
 	
 	/*
@@ -413,8 +414,8 @@ public class TcpDispatcherTest {
         Integer successfulSends = (Integer) message.getConnectorMap().get(CONNECTOR_MAP_SUCCESSFUL_SENDS_KEY);
         
         assertEquals(Status.QUEUED, response.getStatus());
-        assertEquals(new Integer(0), successfulSends);
-        assertEquals(new Integer(0), numberOfClients);
+        assertEquals(Integer.valueOf(0), successfulSends);
+        assertEquals(Integer.valueOf(0), numberOfClients);
 	}
 	
 	/*
@@ -457,8 +458,8 @@ public class TcpDispatcherTest {
         Integer successfulSends = (Integer) message.getConnectorMap().get(CONNECTOR_MAP_SUCCESSFUL_SENDS_KEY);
         
         assertEquals(Status.QUEUED, response.getStatus());
-        assertEquals(new Integer(0), successfulSends);
-        assertEquals(new Integer(0), numberOfClients);
+        assertEquals(Integer.valueOf(0), successfulSends);
+        assertEquals(Integer.valueOf(0), numberOfClients);
 	}
 	
 	/*
@@ -501,8 +502,8 @@ public class TcpDispatcherTest {
         Integer successfulSends = (Integer) message.getConnectorMap().get(CONNECTOR_MAP_SUCCESSFUL_SENDS_KEY);
         
         assertEquals(Status.QUEUED, response.getStatus());
-        assertEquals(new Integer(0), successfulSends);
-        assertEquals(new Integer(0), numberOfClients);
+        assertEquals(Integer.valueOf(0), successfulSends);
+        assertEquals(Integer.valueOf(0), numberOfClients);
 	}
 	
 	/*
@@ -616,8 +617,8 @@ public class TcpDispatcherTest {
         
         log(message.getConnectorMap().get(CONNECTOR_MAP_ALL_RESPONSES_KEY));
         assertEquals(Status.SENT, response.getStatus());
-        assertEquals(new Integer(2), successfulSends);
-        assertEquals(new Integer(3), numberOfClients);
+        assertEquals(Integer.valueOf(2), successfulSends);
+        assertEquals(Integer.valueOf(3), numberOfClients);
 	}
 	
 	@Test
@@ -682,7 +683,7 @@ public class TcpDispatcherTest {
 	
 	private static void logError(String message) {
 		if (PRINT_DEBUG_MESSAGES) {
-			logError(message);
+			System.out.println(message);
 		}
 	}
 	
